--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -6,7 +6,7 @@
         <i class="mdi mdi-minus"></i>
       </button>
     </div>
-    <input type="number" class="form-control" placeholder=""name="porcentaje"  [(ngModel)]="porcentaje">
+    <input #txtProgress type="number" class="form-control" name="porcentaje"  [(ngModel)]="porcentaje" min="1" max="100" (ngModelChange)="onChanges($event)">
     <div class="input-group-prepend">
       <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
         
